# HUAT-kerwin-labwork

./: .clang-format  .editorconfig  .eslintrc  .gitattributes  .gitignore  .prettierrc  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  helloworld.cpp  pyproject.toml  【学生版】实验二 堆栈和队列基本操作的编程实现.doc  实验报告模版.doc
C语言课设/: CMakeLists.txt  README.md  vehicle_claim.c  车辆索赔.c
DateBash/: README.md  【学生版】实验六  图基本操作的编程实现.doc
HUATJavaWebLab/: JAVA高级编程实验2023.doc  README.md  ~$VA高级编程实验2023.doc
android-mobile-development/: README.md
android移动开发/: 《手机应用系统开发》实验指导书 - - 2021.doc
c-course-design/: vehicle_claim.h  课设zcw2022-02-03.docx
compiler-principles/Code/Grammar_analysis/: CMakeLists.txt
compiler-principles/Code/Grammar_analysis/src/: ExpressionCalculator.cpp  TESTSYM.CPP
computer-organization/: 计算机组成原理.实验1.docx  计算机组成原理.实验2.docx  计算机组成原理.实验3.docx  计算机组成原理实验4.doc
data-analysis-visualization/: README.md  requirements.txt
data-collection-preprocessing/: 1.txt
data-structures-course-design/coding/MazeProject/: CMakeLists.txt  CMakeLists.txt.user.dd9840c  README.md  constants.h  insert_sections.py  mazewidget.cpp  mazewidget.h  widget.cpp  widget.h  widget.ui
data-structures-course-design/coding/MazeProject/core/: algorithms.cpp  algorithms.h
data-structures-course-design/coding/MazeProject/docs/: coordinate-system.md  refactor-summary.md  testing-checklist.md
data-structures-course-design/coding/MazeProject/docs/plans/: 2026-02-20-coordinate-system-refactor.md  2026-02-21-visualization-and-astar-movement.md
data-structures-course-design/coding/MazeProject/models/: mazegrid.cpp  mazegrid.h
data-structures-course-design/coding/MazeProject/services/: fileservice.cpp  fileservice.h
data-structures-course-design/coding/MazeProject/tools/: generate_obsidian_vault_mazeproject.ps1
data-structures-course-design/coding/MazeProject/utils/: gridutils.h
database/: README.md
docs/: directory-cleanup-guide.md  directory-cleanup-report.md  interview-project-statement.md  interview-qa-prep.md  testing-guide.md
embedded-systems/: README.md
javaweb课设/: README.md
java课程设计/: README.md
linux系统应用/: README.md
microcomputer-course-design/: Countdown.asm  微机原理与接口技术.docx
microcomputer-principles/: helloworld.asm
ml-practice/: README.md
operating-system/: README.md  计算机操作系统考试试题汇总.doc
schoolJavaHomework/: LICENSE  README.md
scripts/: generate_obsidian_scan_notes.ps1
tmp/: dav_scan_files.txt  dav_tree_4level.txt
微机原理和接口/: helloworld.asm
(+1145 files in other folders)
